--- a/index.html
+++ b/index.html
@@ -36,19 +36,34 @@
 				<legend>Sugestões</legend>
 				<p><label for="smin">Minutos: &nbsp;&nbsp;</label><input type="text" id="smin" size="2" maxlength="3" value="01" />				
 			</fieldset>
+			<fieldset>
+				<legend>Teste de áudio</legend>
+				<button onclick="playAudio()" type="button">Play Audio</button>
+				<button onclick="pauseAudio()" type="button">Pause Audio</button> 		
+			</fieldset>
 		</article>
 	</section>
+	
 
 	<audio id="myAudio">
 	  <source src="sirene-corte.mp3" type="audio/mpeg">
+	  Seu navegador não suporta HTML5.
 	</audio>
-
-	<button onclick="playAudio()" type="button">Play Audio</button>
-
+	
 
 	<script>
-	
+	var x = document.getElementById("myAudio"); 
+
+	function playAudio() { 
+	    x.play(); 
+	} 
+
+	function pauseAudio() { 
+	    x.pause(); 
+	} 
 	</script>
+
+
 
 </body>
 </html>
