--- a/index.html
+++ b/index.html
@@ -31,12 +31,18 @@
 					</fieldset>
 					<fieldset class=" col-md-4">
 						<legend>Tempo Total</legend>
-						<p><label for="min">Minutos: &nbsp;&nbsp;</label><input type="text" id="min" size="2" maxlength="3" value="04" />
-						<label for="seg">Segundos: </label><input type="text" id="seg" size="2" maxlength="2" value="00" /></p>
+						
+						<label for="min" class="col-md-4 text-right">Minutos: &nbsp;&nbsp;</label>
+						<input class="form-control col-md-2" type="text" id="min" size="2" maxlength="3" value="04" style="width: 50px;" />
+
+						<label for="seg" class="col-md-4 text-right">Segundos:  &nbsp;&nbsp;</label>
+						<input class="form-control col-md-2"  type="text" id="seg" size="2" maxlength="2" value="00"  style="width: 50px;" />
+
 					</fieldset>
 					<fieldset class=" col-md-4">
 						<legend>Sugestões</legend>
-						<p><label for="smin">Minutos: &nbsp;&nbsp;</label><input type="text" id="smin" size="2" maxlength="3" value="01" /></p>	
+						<label for="smin"  class="col-md-4 text-right">Minutos: &nbsp;&nbsp;</label>
+						<input type="text" class="form-control  col-md-2" id="smin" size="2" maxlength="3" value="01"  style="width: 50px;" />	
 					</fieldset>
 
 
@@ -56,6 +62,113 @@
 					</div>
 
 
+
+		</div>
+		<hr class="hr col-md-12">
+		<div class="row">
+
+		<div class="col-md-12">
+
+		<h3 class="text-center">Tec Dojo</h3>
+
+		<em> Dojo: Local de treinamento.</em>
+
+		<h3>Vantagens</h3>
+
+		<p>O <em>Tec Dojo</em> é um ambiente seguro para testar novas ideias, promover
+		o networking e compartilhamento de ideias entre os membros da equipe. É muito
+		comum empresas promoverem Dojos abertos. Dessa forma a empresa pode conhecer
+		profissionais que possam se adequar ao seu ambiente e os profissionais também
+		tem a oportunidade de conhecer o ambiente dessas empresas.</p>
+
+		<h3>Intuito</h3>
+
+		<p>O intuito de se realizar um <strong>Tec Dojo</strong> é a diversão. Desafiar
+		técnicos com novos problemas, novas implementações, enfim, buscar novas
+		soluções saindo da zona de conforto. </p>
+
+		<p>O Dojo <b>não é uma competição</b> sobre quem resolve o problema mais rápido,
+		ou qual solução é melhor implementada.</p>
+
+		<p>Obviamente o conhecimento obtido durante a execução do Tec Dojo é
+		utilizado pelos técnicos nas tarefas de seu dia a dia, o que faz com que a
+		qualidade do trabalho “real” produzido também aumente, de forma indireta, com a
+		realização de Tec Dojos.</p>
+
+		<h3>Ambiente</h3>
+
+		<p>O ambiente e fundamental para que a realização do Tec Dojo seja bem
+		sucedida. De acordo com o formato escolhido é necessário possuir a quantidade
+		de computadores compatível com a quantidade de duplas que irão codificar.
+		Também pode ser interessante a existência de um projetor, para que todos possam
+		visualizar os soluções.</p>
+
+		<p>Alimentação também é importante, afinal técnico feliz é
+		técnico alimentado. </p>
+
+		<p>É importante propiciar um ambiente que seja confortável a todos os
+		participantes. Para tanto, é indispensável conhecer a quantidade (que pode até
+		ser limitada através de inscrições) como também alguns gostos particulares que
+		podem influenciar (restrições alimentares, idioma, etc).</p>
+
+		<h3>Valores</h3>
+
+		<p>A realização de um Tec Dojo bem sucedido depende e fortalece alguns
+		valores em todos os profissionais envolvidos. Entre eles, podemos destacar
+		alguns:</p>
+
+		 <ul>
+
+		 	<li><b>Cooperação</b>: A solução para o problema proposto é construída com a
+		cooperação de todos os participantes, o que cria um ambiente colaborativo;</li>
+
+			<li><b>Participação</b>: Todos os participantes participam da resolução do
+		problema, o que cria um sentimento de igualdade entre todos os envolvidos. Não
+		existem opiniões mais “importantes”;</li>
+
+		<li><b>Coragem</b>: É necessário coragem para sair da zona de conforto e
+		enfrentar um desafio. O ambiente do Tec Dojo propicia que todos desenvolvam
+		essa característica, trabalhando em projetos que permitem que aconteçam erros,
+		sem estar diretamente envolvido na rotina normal de um projeto (prazo, custo,
+		etc);</li>
+
+		<li><b>Respeito</b>: Todos os participantes devem respeitar a solução proposta
+		pelos demais, mesmo conhecendo maneiras diferentes de resolver o problema. Como
+		o intuito é aprender, o respeito pelo tempo de cada participante é fundamental;</li>
+
+		<li><b>Simplicidade</b>: O Tec Dojo serve para compartilhar conhecimentos e
+		experiências entre os participantes. Como cada participante pode estar em um
+		nível técnico diferente, é importante que seja mantida a simplicidade tanto no
+		problema composto como na solução implementada, de forma que todos consigam
+		entender exatamente o que está sendo feito.</li>
+
+		</ul> 
+
+		<h3>Retrospectiva</h3>
+
+		<p>Ao final do Tec Dojo, normalmente, os participantes realizam uma
+		retrospectiva do evento.</p>
+
+		<p>Nessa retrospectiva, que pode ser realizada utilizando diversas
+		técnicas, de maneira geral são respondidas três perguntas básicas:</p>
+
+		 <ul><li>O que aprendemos com o Tec Dojo de hoje;</li><li>O que podemos melhorar para a realização dos próximos Tec Dojos;</li><li>O que devemos continuar fazendo nos próximos Tec Dojos.</li></ul> 
+
+		<p>A retrospectiva é extremamente importante, pois condensa todo o
+		aprendizado do Tec Dojo.</p>
+
+		<p>Alguns times costumam registrar os Tec Dojos realizados (através de
+		filmagens, atas, etc) para consultas futuras. Essa é uma prática extremamente
+		interessante, pois permite que o aprendizado seja compartilhado por mais
+		pessoas mesmo após a realização do Tec Dojo.</p>
+
+
+		<p>Um time motivado produz muito mais, e poucas coisas motivam mais um
+		time técnico do que desafios e novas tecnologias.</p>
+
+		<a href="https://www.devmedia.com.br/o-que-e-o-coding-dojo/30517" target="_blank">Font: https://www.devmedia.com.br/o-que-e-o-coding-dojo/30517</a>
+
+		</div>
 
 		</div>
 
